# eidola

./: .coveragerc  .flake8  .gitignore  .mcp.json  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude-plugin/: plugin.json
docs/plans/: 2026-02-16-arkiv-and-longshade-redesign.md  2026-02-17-layered-persona-architecture-design.md  2026-02-17-longshade-plugin-implementation.md  2026-02-17-longshade-redesign.md  2026-02-17-v03-implementation-plan.md
hooks/: hooks.json  session-start.sh
skills/evaluate/: SKILL.md
skills/generate/: SKILL.md
skills/info/: SKILL.md
skills/interview/: SKILL.md
skills/refresh/: SKILL.md
skills/validate/: SKILL.md
src/longshade/: __init__.py  cli.py  config.py  models.py
src/longshade/ingest/: __init__.py  base.py  bookmarks.py  conversations.py  emails.py  photos.py  reading.py  voice.py  writings.py
src/longshade/output/: __init__.py  persona.py
src/longshade/rag/: __init__.py  chunker.py  embedder.py  index.py
tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_index.py  test_ingest.py  test_models.py  test_voice.py
